--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
+    <title> Circle</title>
   </head>
   <body>
+      <h1 style = "color:red">This is me awesome shape</h1>
     <script src="sketch.js"></script>
   
 
